<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupPage">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#f8f8f8"
            android:fontFamily="@font/roboto_mono_medium"
            android:gravity="center"
            android:text="@string/task_buddy"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#f8f8f8"
            android:fontFamily="@font/roboto_mono_medium"
            android:gravity="center"
            android:text="@string/create_an_account_to_get_started"
            android:textSize="15sp"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:padding="15sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/usernameTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:layout_marginBottom="10sp"
            android:fontFamily="@font/roboto_mono_medium"
            android:gravity="center_vertical"
            android:text="@string/user_name"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/SignUpEnterUserName"
            android:layout_width="match_parent"
            android:layout_height="36sp"
            android:background="@drawable/my_button_bg"
            android:ems="10"
            android:fontFamily="@font/roboto_mono_medium"
            android:gravity="center_vertical"
            android:hint="@string/enter_your_username"
            android:inputType="text"
            android:padding="6sp"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/emailTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="10sp"
            android:fontFamily="@font/roboto_mono_medium"
            android:gravity="center_vertical"
            android:text="@string/email"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/SignUpEnterEmail"
            android:layout_width="match_parent"
            android:layout_height="36sp"
            android:background="@drawable/my_button_bg"
            android:ems="10"
            android:fontFamily="@font/roboto_mono_medium"
            android:gravity="center_vertical"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:padding="6sp"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/passwordTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="10sp"
            android:fontFamily="@font/roboto_mono_medium"
            android:gravity="center_vertical"
            android:text="@string/password"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/SignUpEnterPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/my_button_bg"
            android:ems="10"
            android:fontFamily="@font/roboto_mono_medium"
            android:gravity="center_vertical"
            android:hint="@string/enter_password"
            android:inputType="textVisiblePassword"
            android:padding="6sp" />

        <Button
            android:id="@+id/SignUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:backgroundTint="#FF0000"
            android:fontFamily="@font/roboto_mono_medium"
            android:onClick="openSignUp"
            android:text="@string/sign_up"
            android:textSize="15sp"
            app:cornerRadius="0sp"
            app:strokeColor="#000000"
            app:strokeWidth="2sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4sp"
            android:fontFamily="@font/roboto_mono_medium"
            android:gravity="center"
            android:onClick="openLogin"
            android:text="@string/already_have_an_account"
            android:textSize="15sp"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4sp"
            android:fontFamily="@font/roboto_mono_medium"
            android:gravity="center"
            android:text="@string/term_and_services"
            android:textSize="15sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>