<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#f8f8f8"
            android:fontFamily="@font/roboto_mono_medium"
            android:gravity="center"
            android:text="@string/task_buddy"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/usernameTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:layout_marginBottom="10sp"
            android:fontFamily="@font/roboto_mono_medium"
            android:gravity="center_vertical"
            android:text="@string/user_name"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/LoginEnterEmail"
            android:layout_width="match_parent"
            android:layout_height="36sp"
            android:background="@drawable/my_button_bg"
            android:ems="10"
            android:fontFamily="@font/roboto_mono_medium"
            android:gravity="center_vertical"
            android:hint="@string/enter_your_username"
            android:inputType="textEmailAddress"
            android:padding="6sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/passwordTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="10sp"
            android:fontFamily="@font/roboto_mono_medium"
            android:gravity="center_vertical"
            android:text="@string/password"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/LoginEnterPassword"
            android:layout_width="match_parent"
            android:layout_height="36sp"
            android:background="@drawable/my_button_bg"
            android:ems="10"
            android:fontFamily="@font/roboto_mono_medium"
            android:gravity="center_vertical"
            android:hint="@string/enter_password"
            android:inputType="textVisiblePassword"
            android:padding="6sp" />

        <Button
            android:id="@+id/Loginbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:backgroundTint="#FF0000"
            android:fontFamily="@font/roboto_mono_medium"
            android:text="@string/login"
            android:textSize="15sp"
            app:cornerRadius="0sp"
            app:strokeColor="#000000"
            app:strokeWidth="2sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4sp"
            android:layout_marginTop="8sp"
            android:fontFamily="@font/roboto_mono_medium"
            android:gravity="center"
            android:onClick="openSignUp"
            android:text="@string/don_t_have_an_account_sign_up"
            android:textSize="15sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>