<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskEditPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="#f8f8f8"
            android:fontFamily="@font/roboto_mono_medium"
            android:gravity="center"
            android:text="@string/task_buddy"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="#f8f8f8"
            android:fontFamily="@font/roboto_mono_medium"
            android:gravity="center"
            android:text="@string/edit_your_task"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/EditTaskName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/roboto_mono_medium"
            android:text="@string/edit_enter_task"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EnterEditTaskName"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="600dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/roboto_mono_medium"
            android:hint="@string/enter_task_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/EditTaskDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/roboto_mono_medium"
            android:text="@string/edit_task_details"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EnterEditTaskDetails"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="600dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/roboto_mono_medium"
            android:hint="@string/enter_task_details"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/EdittimeSelection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/roboto_mono_medium"
            android:text="@string/set_task_due_time"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/timeEditSelectButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:layout_weight="0.001"
                android:clickable="true"
                app:srcCompat="@drawable/baseline_watch_later_24" />

            <TextView
                android:id="@+id/EditshowTime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center" />
        </LinearLayout>

        <Button
            android:id="@+id/AddEditTaskButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="#FF0000"
            android:fontFamily="@font/roboto_mono_medium"
            android:text="@string/save_edit_task"
            android:textColor="#000000"
            android:textSize="16sp"
            app:cornerRadius="0sp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>